[package]
name = "matching_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ordered-float = "3.0.0"
tokio = { version = "1", features = ["full"] }
bytes = "1.2.1"
byteorder = "1.4.3"
rand_distr = "0.4.3"
rand = "0.8.5"